# OCCUtils

./: .gitignore  CMakeLists.txt  README.md
inc/: FaceUtils.hxx  SurfaceUtils.hxx
include/: SurfaceUtils.hxx
include/occutils/: Axis.hxx  Boolean.hxx  Compound.hxx  Curve.hxx  Curves.hxx  Direction.hxx  Directions.hxx  Edge.hxx  Equality.hxx  Exceptions.hxx  ExtendedSTEP.hxx  Face.hxx  Fillet.hxx  IO.hxx  Line.hxx  ListUtils.hxx  MakePrimitive.hxx  Pipe.hxx  Plane.hxx  Point.hxx  Primitive.hxx  PrintOCC.hxx  STEPExport.hxx  Shape.hxx  ShapeComponents.hxx  ShapeUtils.hxx  Shapes.hxx  Surface.hxx  SurfaceUtils.hxx  Wire.hxx
src/: Axis.cxx  Boolean.cxx  Compound.cxx  Curve.cxx  Direction.cxx  Directions.cxx  Edge.cxx  Equality.cxx  ExtendedSTEP.cxx  Face.cxx  FaceUtils.cxx  Fillet.cxx  IO.cxx  Line.cxx  MakePrimitive.cxx  Pipe.cxx  Plane.cxx  Point.cxx  Primitive.cxx  PrintOCC.cxx  STEPExport.cxx  Shape.cxx  ShapeComponents.cxx  ShapeUtils.cxx  Surface.cxx  SurfaceUtils.cxx  Wire.cxx
tests/: TestLine.cpp
